Changes to menu to show correctly on mobile/tablets

--- a/lwfitness.css
+++ b/lwfitness.css
@@ -149,7 +149,7 @@ li#synved_social_share-3
 
 
 
-@media (max-width: 480px)
+@media (max-width: 768px)
 {
     #largelogo {
         display:    none;   
@@ -165,18 +165,18 @@ li#synved_social_share-3
     
     
 }
-@media (min-width: 481px) and (max-width: 990px){
+@media (min-width: 769px) and (max-width: 990px){
 
     #largelogo {
-        display:    block;   
+        display:    none;   
     }
     #smalllogo {
-        display:none;
+        display:block;
     }
     
     .navbar-header
     {
-    height: 100px;
+    height: 30px;
     }
         
 }
@@ -192,7 +192,7 @@ li#synved_social_share-3
     
     .navbar-header
     {
-    height: 8px;
+    height: 100px;
     }
     
 }
@@ -205,4 +205,10 @@ li#synved_social_share-3
 #footer #text-4 {
 	list-style-type: none;
     margin-top: 20px;
+}
+
+@media (max-width: 767px){
+    .navbar-default .navbar-nav .open .dropdown-menu > li > a {
+        color:black;
+    }
 }
